# BDXKEngine

./: .gitignore  .gitmodules  BDXKEngine.drawio  BDXKEngine.sln  PropertySheetEditor.props  README.md  vcpkg.json
Core/: CMakeLists.txt
Core/Editor/: CoreEditor.cpp  CoreEditor.h
Core/Editor/AssetImporter/: ObjectImporter.h  SceneImporter.h  ShaderImporter.h  Texture2DImporter.cpp  Texture2DImporter.h
Core/Editor/Core/Assets/: AssetImporter.cpp  AssetImporter.h  ReadMe.md
Core/Editor/Core/Editor/: Editor.h  EditorMenu.h  EditorWindow.cpp
Core/Editor/Core/Settings/: Settings.h
Core/Editor/Editor/: ComponentEditor.cpp  ComponentEditor.h
Core/Editor/EditorMenu/: AssetMenu.cpp  AssetMenu.h  GameObjectMenu.cpp  WindowMenu.cpp  WindowMenu.h
Core/Editor/EditorWindow/: HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.h
Core/Editor/Setting/: PackageSetting.cpp  PackageSetting.h
Core/ResourcesDefault/Shaders/: Fallback.hlsl  Skybox.hlsl
Core/Runtime/: CoreRuntime.cpp
Core/Runtime/Base/Debug/: ReadMe.md
Core/Runtime/Base/Object/: Object.cpp  ReadMe.md
Core/Runtime/Base/Reflection/: ReadMe.md  Reflection.cpp
Core/Runtime/Base/Serializer/: Serializer.cpp  Serializer.h
Core/Runtime/Framework/Actor/: Behavior.cpp  Behavior.h  Component.h  GameObject.cpp  SwitchableObject.cpp  SwitchableObject.h
Core/Runtime/Framework/Scene/: SceneLibrary.h
Core/Runtime/Function/GUI/: GUI.cpp  GUI.h
Core/build-in/: ReadMe.md
Core/include/: ReadMe.md
Core/include/BDXKEditor/: BDXKEditor.cpp  BDXKEditor.h
Core/include/BDXKEngine/: BDXKEngine.cpp  BDXKEngine.h
Core/include/ImGuizmo/: GraphEditor.h  ImGuizmo.cpp  ImGuizmo.h  ImSequencer.cpp
Core/include/imgui/: imgui_internal.h
Core/include/obsolete/: GUI.cpp
Core/include/rapidjson/: document.h  writer.h
source/: CMakeLists.txt
source/Assets/Meshes/: Cube.glb
source/Assets/Shaders/: Lighting.hlsli  ShadowMap.hlsl
source/BDXKEditor/Function/: Assets.cpp  AssetsBuiltIn.h  ProjectSettings.h
source/BDXKEngine/Function/: ReadMe.md
(+1550 files in other folders)
